--- a/D_T_Hieu/formAllpage.html
+++ b/D_T_Hieu/formAllpage.html
@@ -4,14 +4,26 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="shortcut icon" href="../Contents/Images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Contents/Images/favicon.png">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/sweet-alert.css">
+    <link rel="stylesheet" type="text/css" href="Contents/CSS/background.css">
 </head>
 <body>
-
-	<!-- <script type="text/javascript" src="Scripts/bootstrap.min.js"></script> -->
+    <nav class="navbar navbar-fixed-top navbar-light bg-primary">
+      	<a class="navbar-brand text-light font-weight-bold" href="#">ADMIN</a>
+		<form class="form-inline navbar-form pull-right">
+			<input class="form-control" type="text" placeholder="Tìm kiếm tên/mã môn học">
+			<button class="btn btn-success-outline bg-primary text-btn-search" type="submit">Tìm kiếm</button>
+		</form>
+		<button class="btn btn-light " data-toggle="modal" data-target="#bd-example-modal">Lịch sử quản lý</button>
+		<div class="navbar-user">
+			<span class="user-name" id="user-name">DoanTrungHieu</span>
+			<img src="Contents/Images/usericon.png">
+		</div>
+    </nav>
 	<script type="text/javascript" src="Scripts/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="Scripts/sweetalert.min.js"></script>
+	<script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
 </body>
 </html>
