--- a/D_T_Hieu/testAdminPage.html
+++ b/D_T_Hieu/testAdminPage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Admin</title>
     <link rel="shortcut icon" href="Contents/Images/favicon.png">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/sweet-alert.css">
@@ -21,17 +21,16 @@
 				<input class="form-control mr-sm-2 " type="text" placeholder="Tìm kiếm khóa học" aria-label="Search">
 				<button class="btn btn-success-outline bg-primary text-btn-search" type="submit">Tìm kiếm</button>
 			</form>
-			
-			<div class="navbar-user mt-2 mt-md-0">
+			<div class="navbar-user">
 				<span class="user-name" id="user-name">DoanTrungHieu</span>
 				<img src="Contents/Images/usericon.png">
 			</div>
 		</div>
-
 	</nav>
+	
 	<div class="container">
 		<div class="table-responsive">
-			<table class="table table-hover">
+			<table class="table table-hover list-monhoc">
 			  <thead class="thead-dark">
 			    <tr>
 			      <th scope="col">#</th>
@@ -45,7 +44,7 @@
 			    </tr>
 			  </thead>
 			  <tbody>
-			    <tr>
+			    <tr onclick='window.open("E:/BTL_PTUD_WEB/adminPageView.html")'>
 			      <th scope="row">1</th>
 			      <td class="name-subject">Hệ quản trị cơ sở dữ liệu</td>
 			      <td class="id-subject">int 123456</td>
@@ -90,9 +89,10 @@
 			</table>
 		</div>
 	</div>
-
+	
 	<script type="text/javascript" src="Scripts/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="Scripts/sweetalert.min.js"></script>
 	<script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
+	<script type="text/javascript" src="Scripts/connectPage.js"></script>
 </body>
 </html>
