--- a/D_T_Hieu/GVPage.html
+++ b/D_T_Hieu/GVPage.html
@@ -6,25 +6,29 @@
     <title>GV</title>
     <link rel="shortcut icon" href="Contents/Images/favicon.png">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="Contents/CSS/sweet-alert.css">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/background.css">
 </head>
 <body>
 	
-	<nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4 fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top">
 		<a class="navbar-brand" href="#">Logo GV</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<form class="form-inline mr-auto mt-2 mt-md-0">
-				<input class="form-control mr-sm-2 " type="text" placeholder="Tìm kiếm khóa học" aria-label="Search">
-				<button class="btn btn-success-outline bg-primary text-btn-search" type="submit">Tìm kiếm</button>
-			</form>
-			
-			<div class="navbar-user mt-2 mt-md-0">
-				<span class="user-name" id="user-name">DoanTrungHieu</span>
-				<img src="Contents/Images/usericon.png">
+			<div class="mr-auto mt-2 mt-md-0""></div>
+			<div class="btn-group">
+			  	<button type="button" class="btn btn-info dropdown-toggle navbar-user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    	<span class="user-name" id="user-name">Đoàn Trung Hiếu</span>
+			    	<img class="usericon" src="Contents/Images/usericon.png">
+			  	</button>
+			  	<div class="dropdown-menu dropdown-menu-right">
+			  		<span class="dropdown-item" >Thông tin cá nhân</span>
+			    	<button class="dropdown-item logout-user" type="button">
+			    		Thoát
+						<img src="Contents/Images/exit.png">
+			    	</button>
+			  	</div>
 			</div>
 		</div>
 	</nav>
@@ -77,7 +81,6 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="Scripts/jquery-3.3.1.js"></script>
-	<script type="text/javascript" src="Scripts/sweetalert.min.js"></script>
 	<script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
 </body>
 </html>
