--- a/D_T_Hieu/STPage.html
+++ b/D_T_Hieu/STPage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Giảng Viên</title>
+    <title>Sinh viên</title>
     <link rel="shortcut icon" href="Contents/Images/favicon.png">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="Contents/CSS/background.css">
@@ -12,7 +12,7 @@
 <body>
 	
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top">
-		<a class="navbar-brand" href="#">Logo GV</a>
+		<a class="navbar-brand" href="#">Logo SV</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -34,8 +34,9 @@
 		</div>
 	</nav>
 	<div class="container">
-		<h1>Danh sách lớp học phần :</h1>
-		<div class="card-columns tc-list-class">
+		
+		<h1>Danh sách lớp học phần:</h1>
+		<div class="card-columns sv-list-class">
 		  	<div class="card border-dark mb-3" >
 			  	<div class="card-header survey-stt">
 			  		<small class="text-muted survey-done"></small>
