--- a/D_T_Hieu/Introduce.html
+++ b/D_T_Hieu/Introduce.html
@@ -17,7 +17,7 @@
 	</nav>
 
 	<div class="container ctn">
-		<div class="row">
+		<div class="row at-block">
 			<div class="col-sm-6">
 				<div id="carouselExampleIndicators " class="carousel slide" data-ride="carousel">
 				  	<ol class="carousel-indicators">
@@ -46,7 +46,7 @@
 				  	</div>
 				</div>
 			</div>
-  			<div class="col-sm-2"></div>
+			<div class="col-sm-2"></div>
    			<div class="col-sm-4 ">
   				<div class="session-login shadow p-3 bg-white rounded">
   					<div class="title-session">
