--- a/D_T_Hieu/ResultAd.html
+++ b/D_T_Hieu/ResultAd.html
@@ -46,115 +46,32 @@
 		 
 		  		<div class="table-responsive table-result">
 		            <table class="table table-striped table-sm">
-		              <thead>
-		                <tr>
-		                  <th>#</th>
-		                  <th>Danh sách tiêu chí</th>
-		                  <th>Tc1</th>
-		                  <th>Tc2</th>
-		                  <th>tc3</th>
-		                  <th>tc4</th>
-		                  <th>tc5</th>
-		                </tr>
-		              </thead>
-		              <tbody>
-		                <tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td></tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td></tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr><tr>
-		                  <td>1,001</td>
-		                  <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</td>
-		                  <td>ipsum</td>
-		                  <td>dolor</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                  <td>sit</td>
-		                </tr>
-		                
-		              </tbody>
+		              	<thead>
+		                	<tr>
+			                  	<th>#</th>
+			                  	<th>Danh sách tiêu chí</th>
+			                  	<th>Điểm TB</th>
+			                  	<th>Trên 5</th>
+			                  	<th>Dưới 5</th>
+		                	</tr>
+		              	</thead>
+		              	<tbody>
+		              		<tr>
+		                  		<td>1</td>
+		                  		<td class="criteria">Cơ sở vật chất</td>
+		                  		<td class="medium-score">8.6</td>
+		                  		<td class="up-5">65%</td>
+		                  		<td class="under-5">35%</td>
+		                	</tr>
+		                	<tr>
+		                  		<td>2</td>
+		                  		<td class="criteria">Giảng viên giảng dạy tốt, chú ý đến sinh viên</td>
+		                  		<td class="medium-score">9.6</td>
+		                  		<td class="up-5">70%</td>
+		                  		<td class="under-5">30%</td>
+		                	</tr>
+
+		              	</tbody>
 	            	</table>
 	          	</div>
 			
@@ -163,32 +80,20 @@
 		  			
 		  			<div class="row">
 		  				<div class="col note-item">
-		  					<label>Tc1 :</label>
-		  					<p></p>
+		  					<label>Điểm trung bình : </label>
+		  					<p>Tổng điểm sinh viên đánh giá cho tiêu chí / số sinh viên</p>
 		  				</div>
 		  			</div>
 		  			<div class="row">
 		  				<div class="col note-item">
-		  					<label>Tc2 :</label>
-		  					<p></p>
+		  					<label>Trên 5 (tính theo %) : </label>
+		  					<p>Số điểm trên 5 / số sinh viên</p>
 		  				</div>
 		  			</div>
 		  			<div class="row">
 		  				<div class="col note-item">
-		  					<label>Tc3 :</label>
-		  					<p></p>
-		  				</div>
-		  			</div>
-		  			<div class="row">
-		  				<div class="col note-item">
-		  					<label>Tc4 :</label>
-		  					<p></p>
-		  				</div>
-		  			</div>
-		  			<div class="row">
-		  				<div class="col note-item">
-		  					<label>Tc5 :</label>
-		  					<p></p>
+		  					<label>Dưới 5 (tính theo %) : </label>
+		  					<p>Số điểm dưới 5 / số sinh viên</p>
 		  				</div>
 		  			</div>
 		  			<div class="row">
