--- a/D_T_Hieu/Introduce_test.html
+++ b/D_T_Hieu/Introduce_test.html
@@ -18,7 +18,7 @@
 
 	<div class="container ctn">
 		<div class="row at-block">
-			<div class="col-sm-6 col-md-6">
+			<div class="col-sm-8 col-md-7 col-lg-6">
 				<div id="carouselExampleIndicators " class="carousel slide " data-ride="carousel">
 				  	<ol class="carousel-indicators">
 				    	<li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
@@ -46,7 +46,7 @@
 				  	</div>
 				</div>
 			</div>
-			<div class="col-sm-2"></div>
+			<div class="col-sm-2 col-md-2"></div>
    			<div class="col-sm-4 col-md-4">
   				<div class="session-login shadow p-3 bg-white rounded">
   					<div class="title-session">
